# goldendict-ng-reviewer

./: Cargo.toml  Makefile  README.md  review.fish
related_word_from_mdict/: Makefile  main.py  pyproject.toml
src/: csv.rs  favorite.rs  lib.rs  merriam.rs  spaced_repetition.rs  utils.rs  word2vec.rs
src/fsrs/: mod.rs  sqlite_history.rs
