[package]
name = "goldendict-ng-helper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
dirs = "5.0.1"
rs-fsrs = { version = "1.2.1" , features = ["serde"] }
chrono = { features = ["clock", "serde"], default-features = false, version = "0.4" }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "regexp"] }
cursive = "0.21.1"
urlencoding = "2.1.3"
shadow-rs = "0"
walkdir = "2"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
shadow-rs = "0"
